build_linux/generated/AvaLangParser.cpp

// Generated from /mnt/d/_CODE_/avalang/runtime/avalang/grammar/AvaLang.g4 by ANTLR 4.13.2


#include "AvaLangListener.h"
#include "AvaLangVisitor.h"

#include "AvaLangParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct AvaLangParserStaticData final {
  AvaLangParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  AvaLangParserStaticData(const AvaLangParserStaticData&) = delete;
  AvaLangParserStaticData(AvaLangParserStaticData&&) = delete;
  AvaLangParserStaticData& operator=(const AvaLangParserStaticData&) = delete;
  AvaLangParserStaticData& operator=(AvaLangParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag avalangParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<AvaLangParserStaticData> avalangParserStaticData = nullptr;

void avalangParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (avalangParserStaticData != nullptr) {
    return;
  }
#else
  assert(avalangParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<AvaLangParserStaticData>(
    std::vector<std::string>{
      "chunk", "block", "statement", "simpleStatement", "smallStatement", 
      "modifiedAssignStatement", "incDecStatement", "compoundStatement", 
      "memberModifier", "modifiedFuncDeclaration", "tryStatement", "exceptClause", 
      "finallyClause", "multiAssignStatement", "assignStatement", "augAssignStatement", 
      "exprStatement", "returnStatement", "breakStatement", "continueStatement", 
      "passStatement", "importStatement", "localStatement", "raiseStatement", 
      "yieldStatement", "ifStatement", "elifClause", "elseClause", "whileStatement", 
      "forStatement", "funcDeclaration", "classDeclaration", "classHeritage", 
      "externStatement", "externFuncDeclaration", "externParamList", "externParam", 
      "paramList", "param", "targetList", "target", "exprList", "expr", 
      "shortLambdaExpr", "lambdaExpr", "orExpr", "andExpr", "notExpr", "comparison", 
      "compOp", "additive", "multiplicative", "unary", "power", "postfix", 
      "trailer", "sliceRange", "argList", "arg", "primary", "listLiteral", 
      "dictLiteral", "dictEntry"
    },
    std::vector<std::string>{
      "", "';'", "'static'", "'private'", "'try'", "'end'", "'catch'", "'('", 
      "')'", "'finally'", "','", "'='", "'+='", "'-='", "'*='", "'/='", 
      "'%='", "'//='", "'return'", "'break'", "'continue'", "'pass'", "'import'", 
      "'.'", "'as'", "'local'", "'raise'", "'yield'", "'if'", "'then'", 
      "'elif'", "'else'", "'while'", "'for'", "'in'", "'func'", "'class'", 
      "':'", "'extern'", "'*'", "'=>'", "'or'", "'and'", "'not'", "'=='", 
      "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'/'", "'%'", 
      "'**'", "'['", "']'", "'true'", "'false'", "'nil'", "'base'", "'{'", 
      "'}'", "'ava'", "'++'", "'--'", "'//'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "AVA_LANG", "INC", 
      "DEC", "IDIV", "NAME", "NUMBER", "STRING", "FSTRING", "NEWLINE", "COMMENT", 
      "WS", "LINE_JOIN"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  avalangParserStaticData = std::move(staticData);
}

}

AvaLangParser::AvaLangParser(TokenStream *input) : AvaLangParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

AvaLangParser::AvaLangParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  AvaLangParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *avalangParserStaticData->atn, avalangParserStaticData->decisionToDFA, avalangParserStaticData->sharedContextCache, options);
}

AvaLangParser::~AvaLangParser() {
  delete _interpreter;
}

const atn::ATN& AvaLangParser::getATN() const {
  return *avalangParserStaticData->atn;
}

std::string AvaLangParser::getGrammarFileName() const {
  return "AvaLang.g4";
}

const std::vector<std::string>& AvaLangParser::getRuleNames() const {
  return avalangParserStaticData->ruleNames;
}

const dfa::Vocabulary& AvaLangParser::getVocabulary() const {
  return avalangParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView AvaLangParser::getSerializedATN() const {
  return avalangParserStaticData->serializedATN;
}


//----------------- ChunkContext ------------------------------------------------------------------

AvaLangParser::ChunkContext::ChunkContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AvaLangParser::StatementContext *> AvaLangParser::ChunkContext::statement() {
  return getRuleContexts<AvaLangParser::StatementContext>();
}

AvaLangParser::StatementContext* AvaLangParser::ChunkContext::statement(size_t i) {
  return getRuleContext<AvaLangParser::StatementContext>(i);
}

std::vector<tree::TerminalNode *> AvaLangParser::ChunkContext::NEWLINE() {
  return getTokens(AvaLangParser::NEWLINE);
}

tree::TerminalNode* AvaLangParser::ChunkContext::NEWLINE(size_t i) {
  return getToken(AvaLangParser::NEWLINE, i);
}


size_t AvaLangParser::ChunkContext::getRuleIndex() const {
  return AvaLangParser::RuleChunk;
}

void AvaLangParser::ChunkContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AvaLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChunk(this);
}

void AvaLangParser::ChunkContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AvaLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChunk(this);
}


std::any AvaLangParser::ChunkContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AvaLangVisitor*>(visitor))
    return parserVisitor->visitChunk(this);
  else
    return visitor->visitChildren(this);
}

AvaLangParser::ChunkContext* AvaLangParser::chunk() {
  ChunkContext *_localctx = _tracker.createInstance<ChunkContext>(_ctx, getState());
  enterRule(_localctx, 0, AvaLangParser::RuleChunk);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(130);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4505860614630670492) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & 251) != 0)) {
      setState(128);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case AvaLangParser::T__1:
        case AvaLangParser::T__2:
        case AvaLangParser::T__3:
        case AvaLangParser::T__6:
        case AvaLangParser::T__17:
        case AvaLangParser::T__18:
        case AvaLangParser::T__19:
        case AvaLangParser::T__20:
        case AvaLangParser::T__21:
        case AvaLangParser::T__24:
        case AvaLangParser::T__25:
        case AvaLangParser::T__26:
        case AvaLangParser::T__27:
        case AvaLangParser::T__31:
        case AvaLangParser::T__32:
        case AvaLangParser::T__34:
        case AvaLangParser::T__35:
        case AvaLangParser::T__37:
        case AvaLangParser::T__42:
        case AvaLangParser::T__50:
        case AvaLangParser::T__54:
        case AvaLangParser::T__56:
        case AvaLangParser::T__57:
        case AvaLangParser::T__58:
        case AvaLangParser::T__59:
        case AvaLangParser::T__60:
        case AvaLangParser::INC:
        case AvaLangParser::DEC:
        case AvaLangParser::NAME:
        case AvaLangParser::NUMBER:
        case AvaLangParser::STRING:
        case AvaLangParser::FSTRING: {
          setState(126);
          statement();
          break;
        }

        case AvaLangParser::NEWLINE: {
          setState(127);
          match(AvaLangParser::NEWLINE);
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(132);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

AvaLangParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AvaLangParser::StatementContext *> AvaLangParser::BlockContext::statement() {
  return getRuleContexts<AvaLangParser::StatementContext>();
}

AvaLangParser::StatementContext* AvaLangParser::BlockContext::statement(size_t i) {
  return getRuleContext<AvaLangParser::StatementContext>(i);
}

std::vector<tree::TerminalNode *> AvaLangParser::BlockContext::NEWLINE() {
  return getTokens(AvaLangParser::NEWLINE);
}

tree::TerminalNode* AvaLangParser::BlockContext::NEWLINE(size_t i) {
  return getToken(AvaLangParser::NEWLINE, i);
}


size_t AvaLangParser::BlockContext::getRuleIndex() const {
  return AvaLangParser::RuleBlock;
}

void AvaLangParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AvaLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void AvaLangParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AvaLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


std::any AvaLangParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AvaLangVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

AvaLangParser::BlockContext* AvaLangParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 2, AvaLangParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(137);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4505860614630670492) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & 251) != 0)) {
      setState(135);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case AvaLangParser::T__1:
        case AvaLangParser::T__2:
        case AvaLangParser::T__3:
        case AvaLangParser::T__6:
        case AvaLangParser::T__17:
        case AvaLangParser::T__18:
        case AvaLangParser::T__19:
        case AvaLangParser::T__20:
        case AvaLangParser::T__21:
        case AvaLangParser::T__24:
        case AvaLangParser::T__25:
        case AvaLangParser::T__26:
        case AvaLangParser::T__27:
        case AvaLangParser::T__31:
        case AvaLangParser::T__32:
        case AvaLangParser::T__34:
        case AvaLangParser::T__35:
        case AvaLangParser::T__37:
        case AvaLangParser::T__42:
        case AvaLangParser::T__50:
        case AvaLangParser::T__54:
        case AvaLangParser::T__56:
        case AvaLangParser::T__57:
        case AvaLangParser::T__58:
        case AvaLangParser::T__59:
        case AvaLangParser::T__60:
        case AvaLangParser::INC:
        case AvaLangParser::DEC:
        case AvaLangParser::NAME:
        case AvaLangParser::NUMBER:
        case AvaLangParser::STRING:
        case AvaLangParser::FSTRING: {
          setState(133);
          statement();
          break;
        }

        case AvaLangParser::NEWLINE: {
          setState(134);
          match(AvaLangParser::NEWLINE);
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(139);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

AvaLangParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

AvaLangParser::SimpleStatementContext* AvaLangParser::StatementContext::simpleStatement() {
  return getRuleContext<AvaLangParser::SimpleStatementContext>(0);
}

AvaLangParser::CompoundStatementContext* AvaLangParser::StatementContext::compoundStatement() {
  return getRuleContext<AvaLangParser::CompoundStatementContext>(0);
}


size_t AvaLangParser::StatementContext::getRuleIndex() const {
  return AvaLangParser::RuleStatement;
}

void AvaLangParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AvaLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void AvaLangParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AvaLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any AvaLangParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AvaLangVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

AvaLangParser::StatementContext* AvaLangParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, AvaLangParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(142);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(140);
      simpleStatement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(141);
      compoundStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SimpleStatementContext ------------------------------------------------------------------

AvaLangParser::SimpleStatementContext::SimpleStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

AvaLangParser::SmallStatementContext* AvaLangParser::SimpleStatementContext::smallStatement() {
  return getRuleContext<AvaLangParser::SmallStatementContext>(0);
}

std::vector<tree::TerminalNode *> AvaLangParser::SimpleStatementContext::NEWLINE() {
  return getTokens(AvaLangParser::NEWLINE);
}

tree::TerminalNode* AvaLangParser::SimpleStatementContext::NEWLINE(size_t i) {
  return getToken(AvaLangParser::NEWLINE, i);
}


size_t AvaLangParser::SimpleStatementContext::getRuleIndex() const {
  return AvaLangParser::RuleSimpleStatement;
}

void AvaLangParser::SimpleStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AvaLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSimpleStatement(this);
}

void AvaLangParser::SimpleStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AvaLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSimpleStatement(this);
}


std::any AvaLangParser::SimpleStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AvaLangVisitor*>(visitor))
    return parserVisitor->visitSimpleStatement(this);
  else
    return visitor->visitChildren(this);
}

AvaLangParser::SimpleStatementContext* AvaLangParser::simpleStatement() {
  SimpleStatementContext *_localctx = _tracker.createInstance<SimpleStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, AvaLangParser::RuleSimpleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(144);
    smallStatement();
    setState(148); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(148);
              _errHandler->sync(this);
              switch (_input->LA(1)) {
                case AvaLangParser::NEWLINE: {
                  setState(145);
                  match(AvaLangParser::NEWLINE);
                  break;
                }

                case AvaLangParser::T__0: {
                  setState(146);
                  match(AvaLangParser::T__0);
                  setState(147);
                  match(AvaLangParser::NEWLINE);
                  break;
                }

              default:
                throw NoViableAltException(this);
              }
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(150); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SmallStatementContext ------------------------------------------------------------------

AvaLangParser::SmallStatementContext::SmallStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

AvaLangParser::AssignStatementContext* AvaLangParser::SmallStatementContext::assignStatement() {
  return getRuleContext<AvaLangParser::AssignStatementContext>(0);
}

AvaLangParser::MultiAssignStatementContext* AvaLangParser::SmallStatementContext::multiAssignStatement() {
  return getRuleContext<AvaLangParser::MultiAssignStatementContext>(0);
}

AvaLangParser::AugAssignStatementContext* AvaLangParser::SmallStatementContext::augAssignStatement() {
  return getRuleContext<AvaLangParser::AugAssignStatementContext>(0);
}

AvaLangParser::ExprStatementContext* AvaLangParser::SmallStatementContext::exprStatement() {
  return getRuleContext<AvaLangParser::ExprStatementContext>(0);
}

AvaLangParser::ReturnStatementContext* AvaLangParser::SmallStatementContext::returnStatement() {
  return getRuleContext<AvaLangParser::ReturnStatementContext>(0);
}

AvaLangParser::BreakStatementContext* AvaLangParser::SmallStatementContext::breakStatement() {
  return getRuleContext<AvaLangParser::BreakStatementContext>(0);
}

AvaLangParser::ContinueStatementContext* AvaLangParser::SmallStatementContext::continueStatement() {
  return getRuleContext<AvaLangParser::ContinueStatementContext>(0);
}

AvaLangParser::PassStatementContext* AvaLangParser::SmallStatementContext::passStatement() {
  return getRuleContext<AvaLangParser::PassStatementContext>(0);
}

AvaLangParser::ImportStatementContext* AvaLangParser::SmallStatementContext::importStatement() {
  return getRuleContext<AvaLangParser::ImportStatementContext>(0);
}

AvaLangParser::LocalStatementContext* AvaLangParser::SmallStatementContext::localStatement() {
  return getRuleContext<AvaLangParser::LocalStatementContext>(0);
}

AvaLangParser::RaiseStatementContext* AvaLangParser::SmallStatementContext::raiseStatement() {
  return getRuleContext<AvaLangParser::RaiseStatementContext>(0);
}

AvaLangParser::YieldStatementContext* AvaLangParser::SmallStatementContext::yieldStatement() {
  return getRuleContext<AvaLangParser::YieldStatementContext>(0);
}

AvaLangParser::IncDecStatementContext* AvaLangParser::SmallStatementContext::incDecStatement() {
  return getRuleContext<AvaLangParser::IncDecStatementContext>(0);
}

AvaLangParser::ModifiedAssignStatementContext* AvaLangParser::SmallStatementContext::modifiedAssignStatement() {
  return getRuleContext<AvaLangParser::ModifiedAssignStatementContext>(0);
}


size_t AvaLangParser::SmallStatementContext::getRuleIndex() const {
  return AvaLangParser::RuleSmallStatement;
}

void AvaLangParser::SmallStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AvaLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSmallStatement(this);
}

void AvaLangParser::SmallStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AvaLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSmallStatement(this);
}


std::any AvaLangParser::SmallStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AvaLangVisitor*>(visitor))
    return parserVisitor->visitSmallStatement(this);
  else
    return visitor->visitChildren(this);
}

AvaLangParser::SmallStatementContext* AvaLangParser::smallStatement() {
  SmallStatementContext *_localctx = _tracker.createInstance<SmallStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, AvaLangParser::RuleSmallStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(166);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(152);
      assignStatement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(153);
      multiAssignStatement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(154);
      augAssignStatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(155);
      exprStatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(156);
      returnStatement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(157);
      breakStatement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(158);
      continueStatement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(159);
      passStatement();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(160);
      importStatement();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(161);
      localStatement();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(162);
      raiseStatement();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(163);
      yieldStatement();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(164);
      incDecStatement();
      break;
    }

    case 14: {
      enterOuterAlt(_localctx, 14);
      setState(165);
      modifiedAssignStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModifiedAssignStatementContext ------------------------------------------------------------------

AvaLangParser::ModifiedAssignStatementContext::ModifiedAssignStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

AvaLangParser::AssignStatementContext* AvaLangParser::ModifiedAssignStatementContext::assignStatement() {
  return getRuleContext<AvaLangParser::AssignStatementContext>(0);
}

std::vector<AvaLangParser::MemberModifierContext *> AvaLangParser::ModifiedAssignStatementContext::memberModifier() {
  return getRuleContexts<AvaLangParser::MemberModifierContext>();
}

AvaLangParser::MemberModifierContext* AvaLangParser::ModifiedAssignStatementContext::memberModifier(size_t i) {
  return getRuleContext<AvaLangParser::MemberModifierContext>(i);
}


size_t AvaLangParser::ModifiedAssignStatementContext::getRuleIndex() const {
  return AvaLangParser::RuleModifiedAssignStatement;
}
